Update README with v2.0 database features and comprehensive documentation